Revert "bat loi  dang ki login va dang ki done"
This reverts commit 6d583e190d449bf4ce7ba841f229242d60eb401d.

--- a/src/main/resources/templates/user/security/login_register.html
+++ b/src/main/resources/templates/user/security/login_register.html
@@ -28,8 +28,8 @@
                     <a href="#" class="social"><i class="lni lni-google"></i></a>
                     <a href="#" class="social"><i class="lni lni-twitter-original"></i></a>
                 </div>
-                <div id="error-message-register" class="error-message-register" ng-show="errorMessage">{{ errorMessage }}</div>
-            <div id="success-message-register" class="success-message" ng-show="successMessage">{{ successMessage }}</div>
+                <div id="error-message-register" class="error-message-register"></div>
+                <div id="success-message-register" class="success-message"></div>
             </form>
             <div class="loading-overlay" ng-show="loading">
             <div class="loading-spinner"></div>
