--- a/src/main/resources/templates/user/security/login_register.html
+++ b/src/main/resources/templates/user/security/login_register.html
@@ -29,7 +29,7 @@
                     <a href="#" class="social"><i class="lni lni-twitter-original"></i></a>
                 </div>
                 <div id="error-message-register" class="error-message-register" ng-show="errorMessage">{{ errorMessage }}</div>
-            <div id="success-message-register" class="success-message" ng-show="successMessage">{{ successMessage }}</div>
+            <div id="success-message-register" class="success-message-register" ng-show="successMessage">{{ successMessage }}</div>
             </form>
             <div class="loading-overlay" ng-show="loading">
             <div class="loading-spinner"></div>
