--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -61,6 +61,7 @@
 			<div class="bg-white py-2 collapse-inner rounded">
 				<h6 class="collapse-header">CRUD:</h6>
 				<a class="collapse-item" href="#authority">Authority</a>
+				<a class="collapse-item" href="#account">Account</a>
 			</div>
 		</div>
 	</li>
