--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -115,6 +115,7 @@
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
 	    <script src="/assets/admin/js/dashboard.js"></script>
 	    <script src="/assets/admin/js/discount.js"></script>
+	    <script src="/assets/admin/js/accountadmin.js"></script>
 	    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 	    
 	    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
