--- a/src/main/resources/templates/user/product/list.html
+++ b/src/main/resources/templates/user/product/list.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/user/index :: dynamic(~{::main})}">
-<body>
+<body ng-controller="shopping-cart-ctrl" >
 	<main>
 		<!-- Breadcrumb Section Begin -->
 	    <section class="breadcrumb-section set-bg" data-setbg="/assets/img/breadcrumb.jpg">
@@ -8,7 +8,7 @@
 	            <div class="row">
 	                <div class="col-lg-12 text-center">
 	                    <div class="breadcrumb__text">
-	                        <h2>Organi Shop</h2>
+	                        <h2>Tastybites Shop</h2>
 	                        <div class="breadcrumb__option">
 	                            <a th:href="@{/home/index}">Home</a>
 	                            <span>Shop</span>
@@ -37,78 +37,13 @@
 	                                </div>
 	                                <div class="range-slider">
 	                                    <div class="price-input">
-	                                        <input type="text" id="minamount">
-	                                        <input type="text" id="maxamount">
-	                                    </div>
+										    <input type="text" id="minamount" ng-model="minPrice" ng-change="sortProductsByPrice()">
+										    <input type="text" id="maxamount" ng-model="maxPrice" ng-change="sortProductsByPrice()">
+										</div>
 	                                </div>
 	                            </div>
 	                        </div>
-	                        <div class="sidebar__item sidebar__item__color--option">
-	                            <h4>Colors</h4>
-	                            <div class="sidebar__item__color sidebar__item__color--white">
-	                                <label for="white">
-	                                    White
-	                                    <input type="radio" id="white">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__color sidebar__item__color--gray">
-	                                <label for="gray">
-	                                    Gray
-	                                    <input type="radio" id="gray">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__color sidebar__item__color--red">
-	                                <label for="red">
-	                                    Red
-	                                    <input type="radio" id="red">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__color sidebar__item__color--black">
-	                                <label for="black">
-	                                    Black
-	                                    <input type="radio" id="black">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__color sidebar__item__color--blue">
-	                                <label for="blue">
-	                                    Blue
-	                                    <input type="radio" id="blue">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__color sidebar__item__color--green">
-	                                <label for="green">
-	                                    Green
-	                                    <input type="radio" id="green">
-	                                </label>
-	                            </div>
-	                        </div>
-	                        <div class="sidebar__item">
-	                            <h4>Popular Size</h4>
-	                            <div class="sidebar__item__size">
-	                                <label for="large">
-	                                    Large
-	                                    <input type="radio" id="large">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__size">
-	                                <label for="medium">
-	                                    Medium
-	                                    <input type="radio" id="medium">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__size">
-	                                <label for="small">
-	                                    Small
-	                                    <input type="radio" id="small">
-	                                </label>
-	                            </div>
-	                            <div class="sidebar__item__size">
-	                                <label for="tiny">
-	                                    Tiny
-	                                    <input type="radio" id="tiny">
-	                                </label>
-	                            </div>
-	                        </div>
+
 	                        <div class="sidebar__item">
 	                            <div class="latest-product__text">
 			                        <h4>Đánh Giá Cao</h4>
