--- a/src/main/resources/static/assets/admin/layout/account.html
+++ b/src/main/resources/static/assets/admin/layout/account.html
@@ -15,7 +15,7 @@
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Password</label>
-						<input ng-model="form.password" class="form-control">
+						<input type="password" ng-model="form.password" class="form-control">
 						<div class="erridProduct" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
