--- a/src/main/resources/static/assets/admin/layout/product.html
+++ b/src/main/resources/static/assets/admin/layout/product.html
@@ -65,8 +65,8 @@
 						<div class="errdescription" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6 text-center" style="align-items: center; display: flex;">
-						<label for="image" style="margin: 0;">
-							<img ng-src="{{'/folder/images/' + form.image}}" style="width: 50%;height:50%" />
+						<label for="image" style="margin: 0;width: 170px; height: 160px;">
+							<img ng-src="{{'/assets/img/product/' + form.image}}" style="width: 100%;height:100%" />
 						</label>
 					</div>
 				</div>
