--- a/src/main/resources/static/assets/css/style_login.css
+++ b/src/main/resources/static/assets/css/style_login.css
@@ -91,6 +91,7 @@ button{
     margin: 10px;
     padding: 12px 80px;
     letter-spacing: 1px;
+    cursor: pointer;
     text-transform: capitalize;
     transition: 0.3s ease-in-out;
 }
