--- a/src/main/resources/templates/user/cart/view.html
+++ b/src/main/resources/templates/user/cart/view.html
@@ -97,7 +97,9 @@
 	                    <div class="shoping__checkout">
 	                        <h5>Cart Total</h5>
 	                        <ul>
-								<li>Discount <span style="text-decoration: underline;">đ</span> <span th:text="${#numbers.formatDecimal(discount.price, 0, 'POINT', 0, 'POINT')}" id="discountPrice"></span></li>
+								<li>Sub Total <span style="color: black;">{{getSubtotal()|number}}&nbsp<span style="text-decoration: underline;color: black;">đ</span></span></li>
+								<li>Shipping Fee <span>15,000&nbsp<span style="text-decoration: underline;">đ</span></span></li>
+								<li>Discount <span style="text-decoration: underline;">đ</span> <span th:text="${discount.price}" id="discountPrice"></span></li>
 	                            <li>Total <span>{{getTotal()|number}}&nbsp<span style="text-decoration: underline;">đ</span></span></li>
 	                        </ul>
 	                        <a type="button" class="primary-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">PROCEED TO CHECKOUT</a>
