--- a/src/main/resources/templates/user/order/checkout.html
+++ b/src/main/resources/templates/user/order/checkout.html
@@ -32,16 +32,22 @@
 						<div class="checkout__order">
 							<h4>Đơn Hàng</h4>
 							<div class="checkout__order__products">
-								Sản Phẩm <span>Tổng Tiền</span>
+								Sản Phẩm <span>Tổng</span>
 							</div>
 							<ul ng-repeat="item in cart.items">
 								<li>{{item.name}}<span>{{item.price*item.qty|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span></li>
 							</ul>
 							<div class="checkout__order__subtotal">
-								Discount <span style="text-decoration: underline;">đ</span> <span th:text="${#numbers.formatDecimal(discount.price, 0, 'POINT', 0, 'POINT')}"></span>
+								Tổng Tiền <span>{{(getSubtotal())|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span>
 							</div>
 							<div class="checkout__order__total">
-								Tổng Thanh Toán <span>{{(getTotal() - discount.price)|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span>
+								Phí Vận Chuyển <span style="text-decoration: underline;">đ</span> <span>15,000</span>
+							</div>
+							<div class="checkout__order__total">
+								Giảm Giá <span style="text-decoration: underline;">đ</span> <span th:text="${#numbers.formatDecimal(discount.price, 0, 'POINT', 0, 'POINT')}"></span>
+							</div>
+							<div class="checkout__order__total">
+								Tổng Thanh Toán <span>{{(getTotal())|number}}&nbsp;<span style="text-decoration: underline;">đ</span></span>
 							</div>
 							<div class="checkout__input__checkbox">
 								<label for="payment"> Check Payment <input
