--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -105,7 +105,7 @@
 		              <p class="text-muted mb-0">Mã hóa đơn:
 		              	 <span style="font-weight: bold;" th:text="*{id}" readonly></span>
 		              </p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Phí vấn chuyển: </span> <span style="font-weight: bold;">15.000 đ</span></p>	              
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Phí vận chuyển: </span> <span style="font-weight: bold;">15.000 đ</span></p>	              
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
