--- a/src/main/resources/static/assets/admin/layout/account.html
+++ b/src/main/resources/static/assets/admin/layout/account.html
@@ -1,12 +1,24 @@
 <style>
+	.row {
+	    display: flex;
+	    width: 100%;
+	    align-items: center; /* Vertically align items */
+	    position: relative; /* To position the toggle icon */
+	   	margin-left: 0px;
+	}
+	
+	/* Style for the password toggle icon */
 	.toggle-password {
 	    cursor: pointer;
 	    transition: color 0.3s ease-in-out;
-	    margin-left: 10px;
+	    margin-left: -30px; /* Adjust the spacing */
+	    z-index: 1; /* Make sure the icon appears above the input */
+	    color: rgb(171, 167, 167);
 	}
 	
+	/* Style for the password toggle icon on hover */
 	.toggle-password:hover {
-	    color: rgb(22, 160, 113);
+	    color: rgb(151, 145, 145);
 	}
 </style>
 <div ng-controller="ctrl-accountadmin">
@@ -24,13 +36,14 @@
 			            <div class="errcategory" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
-						<label for="title">Password 
+						<label for="title">Password </label>
+						<div class="row">
+							<input type="{{ showPassword ? 'text' : 'password' }}" ng-model="form.password" class="form-control">
+							<div class="erridProduct" style='color: red;' ></div>
 							<a ng-click="toggleShowPassword()" class="toggle-password">
 							    <i ng-class="{'fas fa-eye': showPassword, 'fas fa-eye-slash': !showPassword}"></i>
 							</a>
-						</label>
-						<input type="{{ showPassword ? 'text' : 'password' }}" ng-model="form.password" class="form-control">
-						<div class="erridProduct" style='color: red;' ></div>
+						</div>	
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">FullName</label>
