--- a/src/main/resources/static/assets/css/style_login.css
+++ b/src/main/resources/static/assets/css/style_login.css
@@ -386,24 +386,49 @@ input {
     }
 }
 
+/* Style for the password input and toggle icon container */
+.row {
+    display: flex;
+    width: 100%;
+    align-items: center; /* Vertically align items */
+    position: relative; /* To position the toggle icon */
+}
+
+/* Style for the password input */
+.row input[type="password"] {
+    background-color: #eee;
+    border-radius: 10px;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+}
+
+/* Style for the password toggle icon */
 .toggle-password {
     cursor: pointer;
     transition: color 0.3s ease-in-out;
-    margin-left: 10px;
+    margin-left: -30px; /* Adjust the spacing */
+    z-index: 1; /* Make sure the icon appears above the input */
+    color: rgb(171, 167, 167);
 }
 
+/* Style for the password toggle icon on hover */
 .toggle-password:hover {
-    color: #4bb6b7;
+    color: rgb(151, 145, 145);
 }
+
 
 .toggle-password2 {
     cursor: pointer;
     transition: color 0.3s ease-in-out;
-    margin-left: 10px;
+    margin-left: -30px; /* Adjust the spacing */
+    z-index: 1; /* Make sure the icon appears above the input */
+    color: rgb(171, 167, 167);
 }
 
 .toggle-password2:hover {
-    color: #4bb6b7;
+    color: rgb(151, 145, 145);
 }
   
   
