--- a/src/main/resources/templates/user/product/detail.html
+++ b/src/main/resources/templates/user/product/detail.html
@@ -105,10 +105,7 @@
 	                                <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab"
 	                                    aria-selected="true">Description</a>
 	                            </li>
-	                            <li class="nav-item">
-	                                <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"
-	                                    aria-selected="false">Information</a>
-	                            </li>
+	                            
 	                            <li class="nav-item">
 	                                <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"
 	                                    aria-selected="false">Reviews <span>(1)</span></a>
@@ -121,43 +118,62 @@
 	                                    <p>[[*{description}]]</p>
 	                                </div>
 	                            </div>
-	                            <div class="tab-pane" id="tabs-2" role="tabpanel">
-	                                <div class="product__details__tab__desc">
-	                                    <h6>Products Infomation</h6>
-	                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-	                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-	                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-	                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-	                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-	                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-	                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-	                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-	                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-	                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-	                                        Proin eget tortor risus.</p>
-	                                    <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-	                                        ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-	                                        elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-	                                        porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-	                                        nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-	                                </div>
-	                            </div>
-	                            <div class="tab-pane" id="tabs-3" role="tabpanel">
-	                                <div class="product__details__tab__desc">
-	                                    <h6>Products Infomation</h6>
-	                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-	                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-	                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-	                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-	                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-	                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-	                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-	                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-	                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-	                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-	                                        Proin eget tortor risus.</p>
-	                                </div>
-	                            </div>
+	                            <!-- Tab for Reviews -->
+<div class="tab-pane" id="tabs-3" role="tabpanel">
+    <div class="product__details__tab__desc">
+        <h6>Reviews</h6>
+        <!-- Review Form -->
+        <div class="review-form">
+            <h5>Add a review</h5>
+            <form th:action="@{/product/addReview}" method="post">
+                <input name="productId" th:value="${item.id}" />
+
+                <div class="rating">
+                    <input type="radio" name="rating" id="star5" value="5" />
+                    <label for="star5"></label>
+                    <input type="radio" name="rating" id="star4" value="4" />
+                    <label for="star4"></label>
+                    <input type="radio" name="rating" id="star3" value="3" />
+                    <label for="star3"></label>
+                    <input type="radio" name="rating" id="star2" value="2" />
+                    <label for="star2"></label>
+                    <input type="radio" name="rating" id="star1" value="1" />
+                    <label for="star1"></label>
+                </div>
+
+                <textarea class="form-control" name="comment" placeholder="Write your review"></textarea>
+                <button type="submit" class="site-btn">Submit</button>
+            </form>
+        </div>
+
+        <!-- List of Reviews -->
+        <div class="review-list">
+            <h5>Customer Reviews</h5>
+            <ul>
+                <li class="review-item" th:each="review : ${reviews}">
+                    <div class="review-avatar">
+                        <img src="/assets/img/avatar.jpg" alt="Avatar">
+                    </div>
+                    <div class="review-details">
+                        <h6 th:text="${review.username}"></h6>
+                        <div class="rating">
+                            <span th:each="i : ${#numbers.sequence(1, review.rating)}">
+                                <i class="fa fa-star"></i>
+                            </span>
+                            <span th:if="${review.rating < 5}">
+                                <i class="fa fa-star-half-o"></i>
+                            </span>
+                        </div>
+                        <p th:text="${review.comment}"></p>
+                        <span class="review-date" th:text="${#dates.format(review.reviewDate, 'MMMM d, yyyy')}"></span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
 	                        </div>
 	                    </div>
 	                </div>
