--- a/src/main/resources/static/assets/admin/layout/account.html
+++ b/src/main/resources/static/assets/admin/layout/account.html
@@ -81,54 +81,121 @@
 			</form>
 		</div>
 	</div>
-	
 	<div class="card shadow mt-3">
-		<div class="card-header" style="display: flex; justify-content: space-between">
-			<h3 class="m-0 font-weight-bold text-primary">List Account</h3>
-			<h6>{{currentPage}} of {{totalPages()}}</h6>
-		</div>
-		<div class="card-body">
-			<table id="example1" class="table table-bordered table-striped text-center">
-				<thead>
-					<tr>
-						<td>Username</td>
-						<th>Password</th>
-						<th>Fullname</th>
-						<th>Email</th>
-						<th>Photo</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="account in getCurrentItems()">
-						<td >{{account.username}}</td>
-						<td >{{account.password}}</td>
-						<td >{{account.fullname}}</td>
-						<td>{{account.email}}</td>
-						<td >{{account.photo}}</td>
-						<td>
-							<button ng-click="edit(account.username)" class="btn btn-light btn-sm">Edit</button>
-							<button ng-click="delete(account.username)" class="btn btn-danger btn-sm">Delete</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+	    <div class="card-header" style="display: flex; justify-content: space-between">
+	        <h3 class="m-0 font-weight-bold text-primary">List Account</h3>
+	        <h6>{{currentPage}} of {{totalPages()}}</h6>
+	    </div>
+	    <div class="card-body">
+			<ul class="nav nav-tabs bg-light" id="myTab" role="tablist">
+			  <li class="nav-item active" role="presentation">
+			    <a class="nav-link fw-bold active" id="edit-tab" data-bs-toggle="tab" data-bs-target="#edit-tab-pane" type="button" role="tab"
+			      aria-controls="edit-tab-pane"
+			      aria-selected="true">
+			      Team Members
+			    </a>
+			  </li>
+			  <li class="nav-item" role="presentation">
+			    <a class="nav-link fw-bold" id="list-tab" data-bs-toggle="tab" data-bs-target="#list-tab-pane" type="button" role="tab" aria-controls="list-tab-pane"
+			      aria-selected="false">
+			      Customers
+			    </a>
+			  </li>
+			</ul>
+			<div class="tab-content" id="myTabContent">
+			  <div class="tab-pane fade  show active" id="edit-tab-pane" role="tabpanel" aria-labelledby="edit-tab" tabindex="0">
+			  	<!--Content tab 1-->
+			  	<div class="col-12 mt-3">
+		            <table id="example1" class="table table-bordered table-striped text-center">
+						<thead>
+							<tr>
+								<td>Username</td>
+								<th>Password</th>
+								<th>Fullname</th>
+								<th>Email</th>
+								<th>Photo</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="account in getCurrentItems()">
+								<td >{{account.username}}</td>
+								<td >{{account.password}}</td>
+								<td >{{account.fullname}}</td>
+								<td >{{account.email}}</td>
+								<td >{{account.photo}}</td>
+								<td>
+									<button ng-click="edit(account.username)" class="btn btn-light btn-sm">Edit</button>
+									<button ng-click="delete(account.username)" class="btn btn-danger btn-sm">Delete</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					
+					<div class="col-12">
+						<div class="col-12">
+							<nav aria-label="..." class="mt-4 d-flex justify-content-center">
+			                	<ul class="pagination">
+			                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPageFirst()">First</a></li>
 			
-			<div class="col-12">
-				<div class="col-12">
-					<nav aria-label="..." class="mt-4 d-flex justify-content-center">
-	                	<ul class="pagination">
-	                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPageFirst()">First</a></li>
-	
-	                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage - 1)">Previous</a></li>
-	                            
-	                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage + 1)">Next</a></li>
-	
-	                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPageLast()">Last</a></li>
-	                	</ul>
-	                </nav>
-				</div>		
+			                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage - 1)">Previous</a></li>
+			                            
+			                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage + 1)">Next</a></li>
+			
+			                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPageLast()">Last</a></li>
+			                	</ul>
+			                </nav>
+						</div>		
+					</div>
+		        </div>
+			  	
+			  </div>
+			  <div class="tab-pane fade" id="list-tab-pane" role="tabpanel" aria-labelledby="list-tab" tabindex="0">
+			    <!--Content tab 2-->
+			    <div class="col-12 mt-3">
+		            <table id="example2" class="table table-bordered table-striped text-center">
+						<thead>
+							<tr>
+								<td>Username</td>
+								<th>Password</th>
+								<th>Fullname</th>
+								<th>Email</th>
+								<th>Photo</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="account in getCurrentItems2()">
+								<td >{{account.username}}</td>
+								<td >{{account.password}}</td>
+								<td >{{account.fullname}}</td>
+								<td >{{account.email}}</td>
+								<td >{{account.photo}}</td>
+								<td>
+									<button ng-click="edit(account.username)" class="btn btn-light btn-sm">Edit</button>
+									<button ng-click="delete(account.username)" class="btn btn-danger btn-sm">Delete</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					
+					<div class="col-12">
+						<div class="col-12">
+							<nav aria-label="..." class="mt-4 d-flex justify-content-center">
+			                	<ul class="pagination">
+			                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPageFirst()">First</a></li>
+			
+			                	    <li ng-class="{disabled: currentPage == 1}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage - 1)">Previous</a></li>
+			                            
+			                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPage(currentPage + 1)">Next</a></li>
+			
+			                	    <li ng-class="{disabled: currentPage == totalPages()}" class="page-item"><a class="page-link" href="" ng-click="setPageLast()">Last</a></li>
+			                	</ul>
+			                </nav>
+						</div>		
+					</div>
+		        </div>
+			    
+			  </div>
 			</div>
-			
-		</div>
+	    </div>
 	</div>
 </div>
