--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -29,7 +29,7 @@
 		<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
 			<div class="bg-white py-2 collapse-inner rounded">
 				<h6 class="collapse-header">CRUD:</h6>
-				<a class="collapse-item" href="#category">Caterogy</a>
+				<a class="collapse-item" href="#category">Category</a>
 				<a class="collapse-item" href="#product">Product</a>
 				<a class="collapse-item" href="#discount">Discount</a>
 			</div>
