--- a/src/main/resources/static/assets/admin/layout/favourites.html
+++ b/src/main/resources/static/assets/admin/layout/favourites.html
@@ -52,7 +52,7 @@
 			<table id="example2" class="table table-bordered table-striped">
 				<thead>
 					<tr>
-						<th>Username</th>
+						<th>Full Name</th>
 						<th>Email</th>
 					</tr>
 				</thead>
