--- a/src/main/resources/static/assets/admin/layout/order_Confirm.html
+++ b/src/main/resources/static/assets/admin/layout/order_Confirm.html
@@ -136,7 +136,12 @@
 				              <p class="text-muted mb-0">Địa chỉ giao hàng:
 				              	<span style="font-weight: bold;" readonly="readonly">{{order.address}}</span>
 				              </p>
+				              <p class="text-muted mb-0">Thanh toán:
+				             	<span style="font-weight: bold;" class="fw-bold me-4" ng-if="order.paypalOrderStatus === 'PAID'">Đã thanh toán</span> 
+				             	<span style="font-weight: bold;" class="fw-bold me-4" ng-if="order.paypalOrderStatus !== 'PAID'">Chưa thanh toán</span> 
+				              </p>
 				            </div>	
+				            
 			              	<div class="row">
 			                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
 			                    <p class="text-muted mb-0" style="font-weight: bold;">Hình</p>
